syntax = "proto3";

option go_package = "edm-entities-approval-workflows-infrastructure";

package Edm.Entities.Approval.Workflows.Infrastructure;

option csharp_namespace = "Edm.Entities.Approval.Workflows.Infrastructure";

message ApprovalWorkflowInfoDb {
  string title = 1;
  string description = 2;
}
